--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <p>Reliable Information of India</p>
 </header>
 
-<nav>
+<<input type="text" id="searchBox" placeholder="Search..." onkeyup="searchData()">
+>
     <a href="data/pin-codes.html">PIN Codes</a>
     <a href="data/ifsc-codes.html">IFSC Codes</a>
     <a href="data/rto-codes.html">RTO Codes</a>
@@ -42,5 +43,6 @@
 
 </body>
 </html>
+
 
 
