--- a/data/pin-codes.html
+++ b/data/pin-codes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<<title>India PIN Codes – State & District Wise List</title>
+<meta name="description" content="Find India PIN codes with state, district and post office details. Updated and accurate postal information.">
+<meta name="keywords" content="India PIN codes, postal codes India, pincode list">
+<meta name="robots" content="index, follow">
+>
     <title>India PIN Codes</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -22,3 +26,4 @@
 
 </body>
 </html>
+
