--- a/data/rto-codes.html
+++ b/data/rto-codes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<<title>RTO Codes in India – State Wise List</title>
+<meta name="description" content="Complete list of RTO codes in India with city and state information.">
+<meta name="keywords" content="RTO codes India, vehicle registration codes">
+<meta name="robots" content="index, follow">
+>
     <title>RTO Codes India</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -22,3 +26,4 @@
 
 </body>
 </html>
+
