--- a/data/emergency-numbers.html
+++ b/data/emergency-numbers.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
+<<title>Emergency Numbers in India</title>
+<meta name="description" content="List of emergency helpline numbers in India including police, ambulance, fire and women helpline.">
+<meta name="keywords" content="emergency numbers India, police helpline, ambulance number">
+<meta name="robots" content="index, follow">
+>
     <title>Emergency Numbers India</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -24,3 +28,4 @@
 
 </body>
 </html>
+
